<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdateAddActivity"
    android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/etName"
        android:hint="@string/et_nama_staff"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:inputType="text" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/etPhone"
        android:hint="@string/et_phone"
        android:layout_marginBottom="10dp"
        android:autofillHints=""/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:id="@+id/etAddress"
        android:hint="@string/et_address"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:inputType="text" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_tambah"
        android:id="@+id/btnAction"
        android:background="@android:color/holo_blue_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

</LinearLayout>